# spriteforge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURAL_REVIEW.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  README-template.md  README.md  REPORT.md  REVIEW.md  REVIEW_AND_PLAN.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreate.sh
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: memory.instruction.md
.github/pr-plans/: pr1-runtime-safety.md  pr2-failure-semantics.md  pr3-anchor-recovery.md  pr4-budget-degradation.md  pr5-retry-gate-correctness.md  pr6-checkpoint-contract.md  pr7-tests-docs.md
.github/workflows/: update-lockfile.yml
configs/: drunn.yaml  sylara.yaml  template.yaml  theron.yaml
configs/examples/: hero.yaml  minimal_generated.yaml  simple_enemy.yaml
docs/: architecture.md  character-config-guide.md  checkpoint_resume_example.md  cost-estimation.md  maintainer-validation-checklist.md  minimal-input-contract.md
docs_assets/: spritesheet_instructions_drunn.md  spritesheet_instructions_sylara.md  spritesheet_instructions_theron.md
scripts/: estimate_costs.py  example_factory.py  run.sh
src/spriteforge/: __init__.py  __main__.py  app.py  assembler.py  budget.py  checkpoint.py  cli.py  config.py  config_builder.py  constants.py  errors.py  frame_generator.py  gates.py  generator.py  logging.py  models.py  observability.py  palette.py  pipeline.py  pipeline_stages.py  preprocessor.py  renderer.py  retry.py  row_processor.py  utils.py  workflow.py  workflow_factory.py
src/spriteforge/preprocessing/: __init__.py  description.py  image_io.py  labeling.py  palette_quantization.py  pipeline.py
src/spriteforge/prompts/: __init__.py  gates.py  generator.py  preprocessor.py  providers.py  retry.py
src/spriteforge/providers/: __init__.py  _base.py  azure_chat.py  chat.py  gpt_image.py
src/spriteforge/web/: __init__.py  vision.py
tests/: conftest.py  mock_chat_provider.py  test_app.py  test_assembler.py  test_budget.py  test_checkpoint.py  test_checkpoint_workflow.py  test_cli.py  test_config.py  test_config_builder.py  test_configs.py  test_errors.py  test_frame_generator.py  test_gates.py  test_generator.py  test_logging.py  test_models.py  test_observability.py  test_palette.py  test_pipeline_stages.py  test_preprocessor.py  test_prompts.py  test_providers.py  test_renderer.py  test_retry.py  test_row_processor.py  test_utils.py  test_web_vision.py  test_workflow.py
