[project]
name = "spriteforge"
version = "0.1.0"
description = "An AI-powered spritesheet generator for 2D games."
readme = "README.md"
requires-python = ">=3.12.12,<3.13"
authors = [{ name = "Francesco Sodano" }]
license = { text = "MIT" }
dependencies = [
    "pillow>=12.1.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black==26.1.0",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "types-pillow>=10.2.0.20240822",
    "types-pyyaml>=6.0.12.20250915",
]
